--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,20 @@
 Package: IdentificationRiskCalculation
-Title: What the Package Does (One Line, Title Case)
+Title: Calculates Identification Risk for Synthetic Data
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    c(person(given = "Ryan",
+           family = "Hornby",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: What license it uses
+           email = "ryanhornby1999@gmail.com"),
+    person(given = "Jingchen",
+           family = "Hu",
+           role = c("aut")))
+Description: Calculates Identification Risk for Synthetic Data.
+License: 
+Depends:
+    R (>= 3.5.0)
+URL: https://github.com/RyanHornby/IdentificationRisk
+BugReports: https://github.com/RyanHornby/IdentificationRisk/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
